<?xml version="1.0"?>
<package format="3">
  <name>nlink_parser</name>
  <version>2.1.0</version>
  <description>The nlink parser package, used for products of nooploop</description>

  <maintainer email="nooploop.studio@gmail.com">Samuel Hsu</maintainer>

  <license>BSD</license>

  <url type="website">https://www.nooploop.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_gtest</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
